# beautifullF1

./: .coverage  .gitignore  CLAUDE.md  README.md  add_image_line_race.py  conftest.py  drivers.py  f1_2025_heatmap_flourish_ranked.csv  f1_race_chart_avec_images.csv  f1_race_chart_results.csv  f1_race_chart_results.json  fine_line_chart_race.py  hamilton_2007_2025_snapshot.csv  hamilton_2024_snapshot.csv  hamilton_quali_duels_2007_2025.csv  line_chart_race.py  main.py  pyproject.toml  race_chart_builder.py  requirements.txt  sessions.py  test_file.py
.fastf1/cache/: fastf1_http_cache.sqlite
.github/workflows/: python-app.yml  refresh-after-gp.yml
docs/: index.html
docs/assets/: dashboard.css  dashboard.js  i18n.json  manifest.json  navbar.js  teams.json
docs/data/: dashboard_2026.json  gp_history.json  qualifying_2026.json
docs/race_chart_builder/: TASKS.md  index.html  script.js  style.css
docs/season_summary_heatmap/: embed.html  f1_2025_flourish_enriched.csv  f1_2026_leaders_heatmap.csv  index.html  script.js  style.css
docs/wdc_projection_repo/: f1_2025_wdc_projection_round14.csv  style.css
gp_history/tools/: gp_history_builder_mexique_v1.py  run_mexico_full.py
hamilton_midseason_tracker/: hamilton_quali_duels_2007_2025_until_R20.csv
hamilton_mildseason_tracker/: __init__.py  cli.py  compute.py  config.py  ergast_jolpica.py  ham_2024_snapshot_min.py  ham_2024_wins_podiums_min.py  ham_poles_single_season_min.py  ham_quali_duels_builder.py  ham_snapshot_2007_2025.py  ham_teammate_comparison_builder.py  hamilton_2007_2025_snapshot.csv  hamilton_midseason_tracker_draft.py  hamilton_teammate_comparison_2007_2025.csv  http.py  midseason_snapshot.py  pipeline.py  schedule.py
projects/dashboard/: PLAN.md  README.md  REFACTOR_PLAN.md  build_all.py  build_circuits_data.py  build_dashboard_data.py  build_gp_history.py  build_qualifying_data.py  calendar_2026.json  check_should_refresh.py  driver_images.json  fetch_calendar.py  sync_to_docs.py
projects/gp_history/: README.md
projects/hamilton_midseason_tracker/: README.md  __init__.py  __main__.py  cli.py  ergast_jolpica.py  ham_2024_snapshot_min.py  ham_quali_duels_builder.py  ham_snapshot_2007_2025.py  ham_teammate_comparison_builder.py  hamilton_quali_duels_2007_2025_until_R20.csv  pipeline.py
projects/hamilton_mildseason_tracker/: config.py  export.py  ham_2024_wins_podiums_min.py  schedule.py  (+3 more)
qualify_duals/: qualifying_duel_builder.py  qualifying_duels_2025.csv
race_chart_builder/: f1_race_chart_fastf1.csv  f1_race_chart_results.csv  f1_race_chart_results.json  main.py  race_chart_builder.py  race_chart_builder_fastf1.py
season_summary_heatmap/: exporter.py  exporter_lead.py  f1_2025_flourish_leadership.csv  lead_main.py  main.py
tests/: conftest.py  test_race_chart_builder.py  tests_race_chart_builder.py
wdc_projection_repo/: wdc_projections.py
(+79 files in other folders)
