[project]
name = "beautifullF1"
version = "0.1.0"
description = "Automated data storytelling and visualization for Formula 1"
authors = [{name = "Heric Libong", email = "hericlibong@gmail.com"}]
requires-python = ">=3.9"

# --- Configuration pytest (tests unitaires) ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=. --cov-report=term-missing --cov-config=pyproject.toml"
# ⚠️ Permettre la découverte dans les projets et un éventuel dossier tests/ à la racine
testpaths = [
    "projects",
    "tests",
]

# --- Configuration coverage ---
[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "test_computing/*",
    "projects/*/drafts/*",
    "projects/quali_duels/*",
    "projects/wdc_projection_repo/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# --- Configuration Ruff ---
[tool.ruff]
line-length = 100
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "test_computing",
    "projects/*/drafts",
    "projects/quali_duels",
    "projects/wdc_projection_repo",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # optionnel

# --- Configuration Black ---
[tool.black]
line-length = 100
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | test_computing
  | projects/.*/drafts
  | projects/quali_duels
  | projects/wdc_projection_repo
)/
'''
